// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Agent policies fleet_agent_policies GET /api/fleet/agent_policies should get a list of agent policies by kuery 1`] = `
Object {
  "agents": 0,
  "inactivity_timeout": 1209600,
  "is_managed": false,
  "is_protected": false,
  "name": "TEST",
  "namespace": "default",
  "revision": 1,
  "schema_version": "1.1.1",
  "status": "active",
  "unprivileged_agents": 0,
  "updated_by": "elastic",
}
`;

exports[`Agent policies fleet_agent_policies POST /api/fleet/agent_policies/_bulk_get should populate package_policies if called with ?full=true 1`] = `
Object {
  "agents": 0,
  "inactivity_timeout": 1209600,
  "is_managed": false,
  "is_protected": false,
  "name": "Bulk GET test policy",
  "namespace": "default",
  "package_policies": Array [
    Object {
      "created_by": "elastic",
      "enabled": true,
      "name": "system-1",
      "namespace": "default",
      "package": Object {
        "name": "system",
        "requires_root": true,
        "title": "System",
      },
      "revision": 1,
      "updated_by": "elastic",
    },
  ],
  "revision": 1,
  "schema_version": "1.1.1",
  "status": "active",
  "unprivileged_agents": 0,
  "updated_by": "elastic",
}
`;
